--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@types/node": "12.7.2",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
+    "@types/react-loader-spinner": "^3.1.0",
     "lodash": "^4.17.15",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-loader-spinner": "^3.1.5",
     "react-scripts": "3.1.1",
     "react-spring": "^8.0.27",
     "typescript": "3.5.3"
